kubernetes/scripts/deployment.postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: banking-api
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
    - name: pgql
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: banking-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - args:
            - postgres
            - -c
            - max_connections=3000
            - -c
            - shared_buffers=32768
          name: postgres
          image: postgres:10.4
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pg-data
          emptyDir: {}
      imagePullSecrets:
        - name: my-secret
