kubernetes/scripts/deployment.rabbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: banking-api
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - image: rabbitmq:3.7.8-management-alpine
          name: rabbitmq
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: banking-api
  name: rabbitmq
  labels:
    app: rabbitmq
    tier: banking-api
spec:
  type: ClusterIP
  ports:
    - port: 5672
      protocol: TCP
      name: rabbit
      targetPort: 5672
    - port: 15672
      protocol: TCP
      name: management
      targetPort: 15672
  selector:
    app: rabbitmq
    tier: banking-api
